Bug 41125 - dbus_g_value_parse_variant leaks GVariant references
Summary: dbus_g_value_parse_variant leaks GVariant references
Status: RESOLVED FIXED
Alias: None
Product: dbus
Classification: Unclassified
Component: GLib (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Simon McVittie
QA Contact: John (J5) Palmieri
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks: 41129
  Show dependency treegraph
 
Reported: 2011-09-22 11:12 UTC by Simon McVittie
Modified: 2012-03-09 10:49 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dbus_g_value_parse_variant: fix several GVariant ref leaks (4.89 KB, patch)
2011-09-22 11:12 UTC, Simon McVittie
Details | Splinter Review

Description Simon McVittie 2011-09-22 11:12:04 UTC
Created attachment 51525 [details] [review]
dbus_g_value_parse_variant: fix several GVariant ref leaks

g_variant_get_child_value() (and hence g_variant_get_variant(), which is
a simple wrapper) returns a ref to the child; we were assuming it didn't.
Comment 1 Jonny Lamb 2012-03-09 10:18:31 UTC
Comment on attachment 51525 [details] [review]
dbus_g_value_parse_variant: fix several GVariant ref leaks

Review of attachment 51525 [details] [review]:
-----------------------------------------------------------------

Looks good to me.
Comment 2 Simon McVittie 2012-03-09 10:49:12 UTC
Thanks, fixed in git for 0.100.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.