dbus_g_value_parse_variant: fix several GVariant ref leaks

g_variant_get_child_value() (and hence g_variant_get_variant(), which is
a simple wrapper) returns a ref to the child; we were assuming it didn't.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=41125
Reviewed-by: Jonny Lamb <jonny.lamb@collabora.co.uk>